--- a/.github/workflows/create-wheels.yaml
+++ b/.github/workflows/create-wheels.yaml
@@ -2,8 +2,16 @@ name: Create wheel
 
 on:
   # run when a release has been created
-  release:
-    types: [created]
+  push:
+    branches:
+      - arm_support
+      - master
+      - "rel_*"
+      # branches used to test the workflow
+      - "workflow_test_*"
+    paths-ignore:
+      - "doc/**"
+      - "examples/**"
 
 env:
   # set this so the sqlalchemy test uses the installed version and not the local one
@@ -101,36 +109,36 @@ jobs:
         run: |
           echo ::set-output name=wheel::`ls dist`
 
-      - name: Upload wheel to release
-        # upload the generated wheel to the github release.
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          # this is a release to the event is called release: https://help.github.com/en/actions/reference/events-that-trigger-workflows#release-event-release
-          # the release event has the structure of this response https://developer.github.com/v3/repos/releases/#create-a-release
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: dist/${{ steps.wheel-name.outputs.wheel }}
-          asset_name: ${{ steps.wheel-name.outputs.wheel }}
-          asset_content_type: application/zip # application/octet-stream
-
-      - name: Set up Python for twine
-        # twine on py2 is very old and is no longer updated, so we change to python 3.8 before upload
-        uses: actions/setup-python@v1
-        with:
-          python-version: "3.8"
-
-      - name: Publish wheel
-        # the action https://github.com/marketplace/actions/pypi-publish runs only on linux and we cannot specify
-        # additional options
-        env:
-          TWINE_USERNAME: __token__
-          # replace TWINE_PASSWORD with token for real pypi
-          # TWINE_PASSWORD: ${{ secrets.test_pypi_token }}
-          TWINE_PASSWORD: ${{ secrets.pypi_token }}
-        run: |
-          pip install -U twine
-          twine upload --skip-existing dist/*
+     # - name: Upload wheel to release
+     #   # upload the generated wheel to the github release.
+     #   uses: actions/upload-release-asset@v1
+     #   env:
+     #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+     #   with:
+     #     # this is a release to the event is called release: https://help.github.com/en/actions/reference/events-that-trigger-workflows#release-event-release
+     #     # the release event has the structure of this response https://developer.github.com/v3/repos/releases/#create-a-release
+     #     upload_url: ${{ github.event.release.upload_url }}
+     #     asset_path: dist/${{ steps.wheel-name.outputs.wheel }}
+     #     asset_name: ${{ steps.wheel-name.outputs.wheel }}
+     #     asset_content_type: application/zip # application/octet-stream
+#
+     # - name: Set up Python for twine
+     #   # twine on py2 is very old and is no longer updated, so we change to python 3.8 before upload
+     #   uses: actions/setup-python@v1
+     #   with:
+     #     python-version: "3.8"
+#
+     # - name: Publish wheel
+     #   # the action https://github.com/marketplace/actions/pypi-publish runs only on linux and we cannot specify
+     #   # additional options
+     #   env:
+     #     TWINE_USERNAME: __token__
+     #     # replace TWINE_PASSWORD with token for real pypi
+     #     # TWINE_PASSWORD: ${{ secrets.test_pypi_token }}
+     #     TWINE_PASSWORD: ${{ secrets.pypi_token }}
+     #   run: |
+     #     pip install -U twine
+     #     twine upload --skip-existing dist/*
 
   make-wheel-linux:
     name: ${{ matrix.python-version }}-${{ matrix.architecture }}-${{ matrix.os }}
@@ -161,7 +169,7 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-      
+
       - name: Get python version
         id: linux-py-version
         env:
@@ -238,49 +246,69 @@ jobs:
           echo ::set-output name=wheel1::`ls *manylinux1*`
           echo ::set-output name=wheel2010::`ls *manylinux2010*`
 
-      - name: Upload wheel manylinux1 to release
-        # upload the generated manylinux1 wheel to the github release. Only a single file per step can be uploaded at the moment
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          # this is a release to the event is called release: https://help.github.com/en/actions/reference/events-that-trigger-workflows#release-event-release
-          # the release event has the structure of this response https://developer.github.com/v3/repos/releases/#create-a-release
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: wheelhouse/${{ steps.wheel-name.outputs.wheel1 }}
-          asset_name: ${{ steps.wheel-name.outputs.wheel1 }}
-          asset_content_type: application/zip # application/octet-stream
+   #   - name: Upload wheel manylinux1 to release
+   #     # upload the generated manylinux1 wheel to the github release. Only a single file per step can be uploaded at the moment
+   #     uses: actions/upload-release-asset@v1
+   #     env:
+   #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+   #     with:
+   #       # this is a release to the event is called release: https://help.github.com/en/actions/reference/events-that-trigger-workflows#release-event-release
+   #       # the release event has the structure of this response https://developer.github.com/v3/repos/releases/#create-a-release
+   #       upload_url: ${{ github.event.release.upload_url }}
+   #       asset_path: wheelhouse/${{ steps.wheel-name.outputs.wheel1 }}
+   #       asset_name: ${{ steps.wheel-name.outputs.wheel1 }}
+   #       asset_content_type: application/zip # application/octet-stream
+#
+   #   - name: Upload wheel manylinux2010 to release
+   #     # upload the generated manylinux2010 wheel to the github release. Only a single file per step can be uploaded at the moment
+   #     uses: actions/upload-release-asset@v1
+   #     env:
+   #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+   #     with:
+   #       # this is a release to the event is called release: https://help.github.com/en/actions/reference/events-that-trigger-workflows#release-event-release
+   #       # the release event has the structure of this response https://developer.github.com/v3/repos/releases/#create-a-release
+   #       upload_url: ${{ github.event.release.upload_url }}
+   #       asset_path: wheelhouse/${{ steps.wheel-name.outputs.wheel2010 }}
+   #       asset_name: ${{ steps.wheel-name.outputs.wheel2010 }}
+   #       asset_content_type: application/zip # application/octet-stream
+#
+   #   - name: Set up Python for twine
+   #     # twine on py2 is very old and is no longer updated, so we change to python 3.8 before upload
+   #     uses: actions/setup-python@v1
+   #     with:
+   #       python-version: "3.8"
+#
+   #   - name: Publish wheel
+   #     # the action https://github.com/marketplace/actions/pypi-publish runs only on linux and we cannot specify
+   #     # additional options
+   #     # We upload both manylinux1 and manylinux2010 wheels. pip will download the appropriate one according to the system.
+   #     # manylinux1 is an older format and is now not very used since many environments can use manylinux2010
+   #     # currently (April 2020) manylinux2014 is still wip, so we do not generate it.
+   #     env:
+   #       TWINE_USERNAME: __token__
+   #       # replace TWINE_PASSWORD with token for real pypi
+   #       # TWINE_PASSWORD: ${{ secrets.test_pypi_token }}
+   #       TWINE_PASSWORD: ${{ secrets.pypi_token }}
+   #     run: |
+   #       pip install -U twine
+   #       twine upload --skip-existing wheelhouse/*manylinux*
 
-      - name: Upload wheel manylinux2010 to release
-        # upload the generated manylinux2010 wheel to the github release. Only a single file per step can be uploaded at the moment
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          # this is a release to the event is called release: https://help.github.com/en/actions/reference/events-that-trigger-workflows#release-event-release
-          # the release event has the structure of this response https://developer.github.com/v3/repos/releases/#create-a-release
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: wheelhouse/${{ steps.wheel-name.outputs.wheel2010 }}
-          asset_name: ${{ steps.wheel-name.outputs.wheel2010 }}
-          asset_content_type: application/zip # application/octet-stream
-
-      - name: Set up Python for twine
-        # twine on py2 is very old and is no longer updated, so we change to python 3.8 before upload
-        uses: actions/setup-python@v1
-        with:
-          python-version: "3.8"
-
-      - name: Publish wheel
-        # the action https://github.com/marketplace/actions/pypi-publish runs only on linux and we cannot specify
-        # additional options
-        # We upload both manylinux1 and manylinux2010 wheels. pip will download the appropriate one according to the system.
-        # manylinux1 is an older format and is now not very used since many environments can use manylinux2010
-        # currently (April 2020) manylinux2014 is still wip, so we do not generate it.
-        env:
-          TWINE_USERNAME: __token__
-          # replace TWINE_PASSWORD with token for real pypi
-          # TWINE_PASSWORD: ${{ secrets.test_pypi_token }}
-          TWINE_PASSWORD: ${{ secrets.pypi_token }}
-        run: |
-          pip install -U twine
-          twine upload --skip-existing wheelhouse/*manylinux*
+  make-wheel-linux-arm64:
+    name: Arm64 wheel-python${{ matrix.python-version }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - "3.6"
+          - "3.7"
+          - "3.8"
+      fail-fast: false
+    steps:
+    - uses: actions/checkout@v2
+    - run: |
+        docker run --rm --privileged multiarch/qemu-user-static:register --reset
+    - uses: docker://multiarch/ubuntu-core:arm64-bionic
+      with:
+        args: 'bash .github/scripts/arm64_create_wheels.sh python${{ matrix.python-version }}'
+    - run: |
+        ls /home/runner/work/sqlalchemy/sqlalchemy
