--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -87,3 +87,23 @@ jobs:
 
       - name: Run tests
         run: tox -e github-${{ matrix.build-type }} -- -q --nomemory ${{ matrix.pytest-args }}
+  arm64-test:
+    name: Testing arm64-python${{ matrix.python-version }}-${{ matrix.build-type }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - "3.6"
+          - "3.7"
+          - "3.8"
+        build-type:
+          - "cext"
+          - "nocext"
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+          docker run --rm --privileged multiarch/qemu-user-static:register --reset
+      - uses: docker://multiarch/ubuntu-core:arm64-bionic
+        with:
+          args: 'bash .github/scripts/arm64_test.sh python${{ matrix.python-version }} github-${{ matrix.build-type }}'
