--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - arm_support
+      - arm_support_testing 
       - master
       - "rel_*"
       # branches used to test the workflow
